--- a/src/app/styles/color.css
+++ b/src/app/styles/color.css
@@ -28,6 +28,7 @@
   --blue-bg-dark: rgba(0, 9, 51, 0.65);
   --blue-bg-darker: rgba(0, 6, 38, 0.9);
   --blue-graph: #1c68a4;
+  --blue-graph-light: rgba(0, 13, 77, 0.45);
 
   /* ===== GREEN SHADES ===== */
   --green: #067a58;
