Enhance Landlord Insight Templates and UI Components
- Added new spacing variable in typography.css for consistent layout.
- Integrated API data fetching in LandlordInsightTemplate for dynamic content.
- Updated LandlordInsightDetailTemplate to include a BreadCrumbSection for improved navigation.
- Refactored PopOver component to use value instead of label for click events.
- Made CSS adjustments across various components for better responsiveness and visual consistency.

--- a/src/components/organisms/AfterLoginHeader/AfterLoginHeader.module.css
+++ b/src/components/organisms/AfterLoginHeader/AfterLoginHeader.module.css
@@ -1,5 +1,7 @@
 .header {
   padding-bottom: 20px;
+  margin-left: 16px;
+  margin-right: 16px;
   border-bottom: 0.5px solid var(--border-light);
 }
 .headerTitle {
@@ -8,7 +10,7 @@
   color: var(--gray-700);
 }
 .body {
-  margin-block-start: 32px;
+  /* margin-block-start: 32px; */
   max-height: calc(100vh - 125px);
-  /* overflow-y: auto; */
+  overflow-y: auto;
 }
