--- a/src/components/Template/LandlordInsightTemplate/LandlordInsightDetailTemplate/LandlordInsightDetailTemplate.module.css
+++ b/src/components/Template/LandlordInsightTemplate/LandlordInsightDetailTemplate/LandlordInsightDetailTemplate.module.css
@@ -1,3 +1,12 @@
 .breadCrumbSection {
   margin-top: 12px;
 }
+
+.statusIcon {
+  width: 24px;
+  height: 24px;
+  color: var(--black-200);
+}
+.propertyDetailSection {
+  margin-block: 24px;
+}
