Enhance UI components and styles
- Added new color variables for dark and black shades in color.css for improved theming.
- Introduced new spacing variables in typography.css to standardize padding and margin across components.
- Updated ComplaintManagement, ContractorDirectoryTemplate, JobRequestTemplate, and TenantProfileTemplate to integrate PopOver component for action menus.
- Enhanced pagination functionality in various templates with improved data handling and no data text.
- Created NotificationTemplate component for displaying notifications with a structured layout.
- Refactored table headers in development context files for consistency in action key naming.
- Added form validation schema and initial values for contractor forms to streamline data entry.

--- a/src/app/styles/color.css
+++ b/src/app/styles/color.css
@@ -61,6 +61,7 @@
   --dark-gray-700: #454545;
   --dark-gray-800: #333333;
   --dark-gray-900: #232323;
+  --dark-gray-1000:#E7E7E7;
 
   /* ===== BLACK SHADES ===== */
   --black-50: #161a1d;
@@ -69,6 +70,7 @@
   --black-300: #232323;
   --black-400: #344054;
   --black-500: #000000;
+  --black-600: #292D32;
 
   /* ===== TEXT COLORS ===== */
   --text-primary: #111827;
