--- a/src/components/Template/SubscriptionManagement/subscriptionManagement.module.css
+++ b/src/components/Template/SubscriptionManagement/subscriptionManagement.module.css
@@ -4,8 +4,13 @@
     font-weight: 600;
     color: var(--black-200);
     font-family: var(--font-rethink);
-    margin-bottom: var(--m-24) !important;
+    margin-top: var(--m-24) !important;
 }
 .plansDiv{
     padding-top: var(--p-24);
+}.headingSection{
+    padding-top: 10px;
+}
+.tabs{
+    margin-block-start: 26px;
 }
