--- a/src/app/styles/color.css
+++ b/src/app/styles/color.css
@@ -29,6 +29,7 @@
   --blue-bg-darker: rgba(0, 6, 38, 0.9);
   --blue-graph: #1c68a4;
   --blue-graph-light: rgba(0, 13, 77, 0.45);
+  --blue-bg-light: rgba(0, 21, 128, 0.04);
 
   /* ===== GREEN SHADES ===== */
   --green: #067a58;
