--- a/src/components/organisms/TotalProperties/TotalProperties.module.css
+++ b/src/components/organisms/TotalProperties/TotalProperties.module.css
@@ -4,8 +4,8 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 16px;
+  height: 100%;
   border-right: 1px solid var(--gray-300);
-  height: calc(100vh - 436px);
 }
 .headerDiv {
   display: flex;
@@ -26,6 +26,12 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+}
+.bodyDiv::-webkit-scrollbar {
+  display: none !important;
+}
+.bodyDiv::-webkit-scrollbar-thumb {
+  display: none !important;
 }
 .propertyDiv {
   display: flex;
@@ -51,6 +57,7 @@
 
 .propertyImage {
   height: 40px;
+  flex: none;
   width: 40px;
   position: relative;
   border-radius: 8px;
