--- a/src/components/molecules/InformationSection/InformationSection.module.css
+++ b/src/components/molecules/InformationSection/InformationSection.module.css
@@ -60,3 +60,30 @@
   background: var(--error-bg);
   color: var(--error);
 }
+
+.descriptionContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.descriptionTitle {
+  color: var(--black-200);
+  margin: 0;
+  border-bottom: 1px solid var(--gray-300);
+  padding-bottom: 12px;
+}
+
+.descriptionContent {
+  color: var(--dark-gray-600);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.5;
+  background: var(--light-gray-100);
+  border-radius: 8px;
+  border: 1px solid var(--light-gray-200);
+  min-height: 120px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
