--- a/src/components/organisms/AfterLoginHeader/AfterLoginHeader.module.css
+++ b/src/components/organisms/AfterLoginHeader/AfterLoginHeader.module.css
@@ -52,16 +52,16 @@
 }
 
 .body::-webkit-scrollbar-button:start:decrement,
-::-webkit-scrollbar-button:end:increment {
+.body::-webkit-scrollbar-button:end:increment {
   display: none !important;
 }
 
 .body::-webkit-scrollbar-button:vertical:start:decrement,
-::-webkit-scrollbar-button:vertical:end:increment {
+.body::-webkit-scrollbar-button:vertical:end:increment {
   display: none !important;
 }
 
 .body::-webkit-scrollbar-button:horizontal:start:decrement,
-::-webkit-scrollbar-button:horizontal:end:increment {
+.body::-webkit-scrollbar-button:horizontal:end:increment {
   display: none !important;
 }
