Update dependencies and enhance UI components
- Added `react-star-ratings` package for improved rating display.
- Modified `TenantDetailTemplate` to conditionally show address.
- Enhanced `InformationSection` with new status icons and improved layout for job requests.
- Updated `PropertyDetailSection` to include address display and refined header layout.
- Improved `UserDetailSection` to incorporate star ratings for user feedback.
- Updated `tenantProfile.js` to include rating and review data for tenants.

--- a/src/components/organisms/PropertyDetailSection/PropertyDetailSection.module.css
+++ b/src/components/organisms/PropertyDetailSection/PropertyDetailSection.module.css
@@ -9,11 +9,18 @@
 .headerDiv {
   display: flex;
   padding: 6px 8px;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
   border-bottom: 1px solid var(--gray-300);
 }
-
+.headerDivContent {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.address {
+  color: var(--black-200);
+}
 .title {
   color: var(--black-200);
 }
