--- a/src/components/molecules/InformationSection/InformationSection.module.css
+++ b/src/components/molecules/InformationSection/InformationSection.module.css
@@ -99,6 +99,9 @@
   border-right: 1px solid var(--gray-300);
   padding-right: 12px;
 }
+.informationItemJobRequests {
+  align-items: flex-start;
+}
 
 .jobRequestsContainer {
   display: flex;
@@ -110,4 +113,74 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+.status {
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100px;
+}
+
+.status svg {
+  width: 16px;
+  height: 16px;
+}
+
+.completed {
+  background: var(--success-bg-light);
+}
+
+.completed svg {
+  color: var(--success);
+}
+
+.ongoing {
+  background: var(--secondary-bg);
+}
+
+.ongoing svg {
+  color: var(--hover-secondary);
+}
+
+.pending {
+  background: var(--gray-100);
+}
+
+.pending svg {
+  color: var(--black-200);
+}
+.jobRequestsItem {
+  display: flex;
+  gap: 8px;
+  /* align-items: center; */
+}
+
+.statusContainer {
+  display: flex;
+  gap: 4px;
+  align-items: center;
+  flex-direction: column;
+}
+
+.jobRequestsLabel {
+  margin-top: 3px;
+}
+
+.statusDot {
+  width: 1px;
+  height: 20px;
+  border-radius: 100px;
+  background: var(--gray-300);
+}
+
+.lastStatusDot {
+  height: 0px;
+  width: 0px;
+}
+.jobRequestsDate {
+  color: var(--black-200);
+  margin-top: 3px;
 }
