Refactor TotalProperties and LandlordInsightDetailTemplate for improved selection and styling
- Updated TotalProperties component to accept selectedProperty prop for highlighting selected items.
- Enhanced LandlordInsightDetailTemplate to pass selectedProperty to TotalProperties.
- Modified CSS to add a new style for selected properties, improving user experience.

--- a/src/components/organisms/TotalProperties/TotalProperties.module.css
+++ b/src/components/organisms/TotalProperties/TotalProperties.module.css
@@ -36,15 +36,19 @@
 .propertyDiv {
   display: flex;
   border-radius: 4px;
-  background: var(--green-light);
   display: flex;
   cursor: pointer;
   transition: all 0.25s ease;
   padding: 4px 8px;
   justify-content: space-between;
   align-items: center;
+}
+
+.selectedPropertyDiv {
+  background: var(--green-light);
   border: 1px solid var(--gray-300);
 }
+
 .propertyDiv:hover {
   transform: translateY(1px);
   background: var(--success-bg);
