--- a/src/components/Template/NotificationTemplate/NotifcationsTemplate.module.css
+++ b/src/components/Template/NotificationTemplate/NotifcationsTemplate.module.css
@@ -10,3 +10,6 @@
   border-bottom: none !important;
   padding-top: var(--p-16) !important;
 }
+.notificationCards:last-child .notificationCard{
+  border-bottom: none !important;
+}
