--- a/src/components/molecules/DropDown/DropDown.module.css
+++ b/src/components/molecules/DropDown/DropDown.module.css
@@ -1,1 +1,9 @@
 
+.label{
+    color: var(--black-50);
+    font-size: var(--fs14);
+    margin-bottom: 8px;
+    font-weight: 400;
+    line-height: 20px;
+    transition: color .2s;
+}
