Enhance Contractor and Tenant Profile Components
- Integrated routing in ContractorDirectoryTemplate for viewing contractor details.
- Updated TenantDetailTemplate to conditionally render job history and improved layout.
- Refactored InformationSection to streamline rendering of review data and job requests.
- Enhanced PropertyDetailSection and UserDetailSection for better data presentation.
- Updated contractorDirectory.js and tenantProfile.js to include detailed review structures and user data.

--- a/src/components/organisms/PropertyDetailSection/PropertyDetailSection.module.css
+++ b/src/components/organisms/PropertyDetailSection/PropertyDetailSection.module.css
@@ -9,15 +9,10 @@
 .headerDiv {
   display: flex;
   padding: 6px 8px;
-  flex-direction: column;
+  /* flex-direction: column; */
   border-bottom: 1px solid var(--gray-300);
 }
-.headerDivContent {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-}
+
 .address {
   color: var(--black-200);
 }
