Refactor components for improved functionality and responsiveness
- Updated typography styles to adjust font sizes for better readability.
- Enhanced ComplaintManagement, ContractorDirectoryTemplate, and JobRequestTemplate components with API integration for data fetching.
- Implemented search and filter functionalities in various templates using jobRequestFilterOptions.
- Added status management in AddorEditContractorModal for better contractor status handling.
- Improved layout and responsiveness in DashboardTemplate and SubscriptionManagementTemplate.
- Refactored useMobileViewHook for better mobile view handling across components.

--- a/src/app/styles/typography.css
+++ b/src/app/styles/typography.css
@@ -156,11 +156,11 @@ h6 {
     --fs13: 13px;
     --fs14: 14px;
     --fs16: 16px;
-    --fs18: 18px;
+    --fs18: 14px;
     --fs20: 20px;
     --fs24: 24px;
     --fs30: 30px;
-    --fs32: 32px;
+    --fs32: 24px;
   }
 }
 
@@ -172,11 +172,11 @@ h6 {
     --fs13: 13px;
     --fs14: 14px;
     --fs16: 16px;
-    --fs18: 18px;
+    /* --fs18: 1px; */
     --fs20: 20px;
     --fs24: 24px;
     --fs30: 30px;
-    --fs32: 32px;
+    --fs32: 20px;
   }
 }
 
