--- a/src/components/organisms/SideBar/SideBar.module.css
+++ b/src/components/organisms/SideBar/SideBar.module.css
@@ -33,6 +33,7 @@
 .logo img {
   object-fit: contain;
 }
+
 .collapsedLogo {
   margin-block: 0px;
   width: 50px;
@@ -70,6 +71,7 @@
   overflow-y: auto;
   overflow-x: hidden;
 }
+
 .nav::-webkit-scrollbar {
   display: none !important;
 }
@@ -77,6 +79,7 @@
 .collapsedNav {
   max-height: calc(100vh - 115px);
 }
+
 .navItem {
   display: flex;
   padding: 8px;
@@ -112,6 +115,7 @@
   color: var(--gray-900);
   transform: translateX(2px);
 }
+
 .navItem:hover img {
   filter: brightness(52%);
 }
@@ -125,6 +129,7 @@
   background: var(--warning);
   color: var(--gray-900);
 }
+
 .selectedNavItem img {
   filter: brightness(52%);
 }
@@ -150,6 +155,7 @@
 .collapseButton:hover {
   transform: scale(1.1);
 }
+
 .subBottom {
   border-top: 0.5px solid var(--text-quaternary);
   padding-block-start: var(--p-30);
@@ -162,6 +168,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .closedSubBottom {
   padding-block-start: var(--p-16);
 }
@@ -170,7 +177,55 @@
   .sideBar {
     width: 24.6%;
   }
+
   .collapsed {
     width: 7%;
+  }
+}
+@media screen and (max-width: 991px) {
+  .collapsed {
+    width: 9%;
+  }
+}
+@media screen and (max-width: 767px) {
+  .collapsed {
+    width: 10%;
+  }
+  .collapsedLogo {
+    width: 39px;
+    height: 39px;
+  }
+  .navItemIcon{
+    width: 20px;
+    height: 20px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .collapsed {
+    width: 12%;
+  }
+  .collapsedLogo {
+    width: 35px;
+    height: 35px;
+  }
+  .navItemIcon{
+    width: 18px;
+    height: 18px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .collapsed {
+    width: 14%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .collapsed {
+    width: 16%;
+  }
+}
+@media screen and (max-width: 360px) {
+  .collapsed {
+    width: 19%;
   }
 }
